syntax = "proto3";

option csharp_namespace = "HealthCare.Documents.Api.Protos";

package DocumentSearch;

service DocumentService {
  rpc GetAll (Empty) returns (DocumentList);
  rpc Get (DocumentId) returns (Document);
}

message Empty{}

message Document {
  string patientId = 1;
  string name = 2;
}

message DocumentList{
    repeated Document documents = 1; 
}

message DocumentId {
  string Id = 1;
}